OrdersListItem: fix columns alignment issue.

--- a/front/src/app/components/common/orders-list-item/index.less
+++ b/front/src/app/components/common/orders-list-item/index.less
@@ -30,7 +30,7 @@
 .orders-list-item {
     display: grid;
     grid-auto-flow: column dense;
-    grid-template-columns: ~'min-content max-content [labels] max-content [values] 3fr [billing] 2fr [end]';
+    grid-template-columns: ~'75px 364px [labels] max-content [values] 3fr [billing] 2fr [end]';
     border-bottom: @ordersListItem-border;
 
     &:first-child {
